src/test/ui/error-codes/E0051.stderr
error[E0051]: unable to use `naked` on function with inputs
  --> $DIR/E0051.rs:3:1
   |
LL | #[naked]
   | ^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0051`.
